# OSEP

./: README.md
install/: local_setup.sh  setup.sh
install/data_publisher/lib/data_publisher/: data_publisher
install/data_publisher/share/ament_index/resource_index/parent_prefix_path/: data_publisher
install/data_publisher/share/data_publisher/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/skel_extract/lib/skel_extract/: skel_extract
install/skel_extract/share/ament_index/resource_index/parent_prefix_path/: skel_extract
install/skel_extract/share/skel_extract/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/data_publisher/: CMakeLists.txt  package.xml
src/data_publisher/data/: 01_base.pcd  02_base_and_tip.pcd  03_base_and_wing.pcd  04_nacelle_two_wings.pcd  05_horizontal_wing_side.pcd  06_horizontal_wing_side_behind.pcd  07_vertical_wing_side_behind.pcd  08_nacelle_side.pcd  09_wings_only_front.pcd
src/data_publisher/src/: file_pub_node.cpp  lidar_pub_node.cpp  pub_node.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/: kalman_vertex_fusion.hpp  planner_main.hpp
src/path_planner/src/: planner_main.cpp  planner_node.cpp
src/path_planning/src/: main.cpp  planner_node.cpp
src/px4_msgs/: CMakeLists.txt
src/px4_pegasus/: CMakeLists.txt  README.md  launch_pegasus.sh  package.xml
src/px4_pegasus/pegasus_simulation/: pegasus_sim.py
src/px4_pegasus/src/: offboard_control.cpp
src/skel_extract/: CMakeLists.txt
src/skel_extract/include/: main.hpp  node.hpp  skel_main.hpp  vis_tools.hpp
src/skel_extract/src/: main.cpp  node.cpp  skel_main.cpp  skel_node.cpp  vis_tools.cpp
